Member 링크, 리다이렉트

--- a/firstproject/src/main/resources/templates/members/index.mustache
+++ b/firstproject/src/main/resources/templates/members/index.mustache
@@ -12,11 +12,13 @@
     {{#list}}
     <tr>
         <th>{{id}}</th>
-        <td>{{email}}</td>
+        <td><a href="/members/{{id}}">{{email}}</a></td>
         <td>{{password}}</td>
     </tr>
     {{/list}}
     </tbody>
 </table>
+
+<a href="/signup">회원가입</a>
 
 {{>layouts/footer}}
