삭제 버튼 구현, querySelectorAll

--- a/firstproject/src/main/resources/templates/comments/_list.mustache
+++ b/firstproject/src/main/resources/templates/comments/_list.mustache
@@ -13,6 +13,9 @@
                         data-bs-body="{{body}}"
                         data-bs-article-id="{{articleId}}"
                         >수정</button>
+                <!-- 댓글 삭제 버튼 -->
+                <button type="button"
+                        class="btn btn-sm btn-outline-danger comment-delete-btn">삭제</button>
             </div>
             <div class="card-body">
                 {{body}}
@@ -104,5 +107,23 @@
             window.location.reload();
         })
     });
+}
+<!-- 댓글 삭제-->
+{
+    // // 삭제 버튼 선택
+    // const commentDeleteBtn = document.querySelector(".comment-delete-btn");
+    // // 삭제 버튼 이벤트 처리
+    // commentDeleteBtn.addEventListener("click",function (){
+    //    console.log("삭제 버튼이 클릭됐습니다..!");
+    // all로 안하면 첫번째 눌린 버튼만
+    // });
+    // 삭제 버튼 선택
+    const commentDeleteBtns = document.querySelectorAll(".comment-delete-btn");
+    // 삭제 버튼 이벤트 처리
+    commentDeleteBtns.forEach(btn =>{
+        btn.addEventListener("click",() => {
+            console.log("삭제 버튼이 클릭됐습니다..!");
+        });
+    })
 }
 </script>
