--- a/firstproject/src/main/resources/templates/comments/_list.mustache
+++ b/firstproject/src/main/resources/templates/comments/_list.mustache
@@ -15,7 +15,7 @@
                         >수정</button>
                 <!-- 댓글 삭제 버튼 -->
                 <button type="button"
-                        class="btn btn-sm btn-outline-danger comment-delete-btn">삭제</button>
+                        class="btn btn-sm btn-outline-danger comment-delete-btn" data-comment-id ="{{id}}">삭제</button>
             </div>
             <div class="card-body">
                 {{body}}
@@ -121,8 +121,27 @@
     const commentDeleteBtns = document.querySelectorAll(".comment-delete-btn");
     // 삭제 버튼 이벤트 처리
     commentDeleteBtns.forEach(btn =>{
-        btn.addEventListener("click",() => {
-            console.log("삭제 버튼이 클릭됐습니다..!");
+        btn.addEventListener("click",(event) => {
+            //console.log("삭제 버튼이 클릭됐습니다..!");
+            // 이벤트 발생 요소 선택
+            const commentDeleteBtn = event.target
+            // 삭제 댓글 id 가져오기
+            const commentId = commentDeleteBtn.getAttribute("data-comment-id");
+            console.log(`삭제 버튼 클릭: ${commentId}번 댓글`);
+            // 삭제 REST API 호출
+            const url = `/api/comments/${commentId}`;
+            fetch(url,{
+                method:"DELETE"
+            }).then(response => {
+                // 댓글 삭제 실패 처리
+                if(!response.ok) {
+                    alert("댓글 삭제 실패..!");
+                    return;
+                }
+                // 삭제 성공 시 댓글을 화면에서 지우고 메시지 창 띄우기
+                const target = document.querySelector(`#comments-${commentId}`);
+                target.remove();
+            })
         });
     })
 }
